[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scripts/LevelScripts/Level06BossControl.gd" type="Script" id=1]
[ext_resource path="res://Scenes/PlayerScenes/PlayersNew/PlayerSingle.tscn" type="PackedScene" id=2]
[ext_resource path="res://OtherHolder/rm-albion/RM Albion font big.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scripts/LevelScripts/Level06BossComplete.gd" type="Script" id=4]
[ext_resource path="res://Scenes/LevelScenes/LevelExtras/LevelEndParticles.tscn" type="PackedScene" id=5]
[ext_resource path="res://Music/MusicControllerBoss.gd" type="Script" id=6]
[ext_resource path="res://Music/Aggressor.ogg" type="AudioStream" id=7]
[ext_resource path="res://Music/Burnt Spirit.ogg" type="AudioStream" id=8]
[ext_resource path="res://Music/Outfoxing the Fox.ogg" type="AudioStream" id=9]
[ext_resource path="res://Scenes/LevelScenes/BaseScenes/BossShipResized.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/LevelScenes/NavMeshScenes/NavMeshBossShipResized.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scripts/EnemyScripts/WaypointsHolder.gd" type="Script" id=12]
[ext_resource path="res://Scenes/EnemyScenes/DaveyJonesBossNav.tscn" type="PackedScene" id=13]

[sub_resource type="Environment" id=1]

background_mode = 1
background_sky_custom_fov = 0.0
background_color = Color( 0.110107, 0, 0.171875, 1 )
background_energy = 0.5
background_canvas_max_layer = 0
ambient_light_color = Color( 0.276418, 0.0686646, 0.351563, 1 )
ambient_light_energy = 0.5
ambient_light_sky_contribution = 1.0
fog_enabled = true
fog_color = Color( 0.578125, 0.124207, 0.571033, 1 )
fog_sun_color = Color( 1, 0.9, 0.7, 1 )
fog_sun_amount = 0.0
fog_depth_enabled = true
fog_depth_begin = 15.0
fog_depth_curve = 1.0
fog_transmit_enabled = false
fog_transmit_curve = 1.0
fog_height_enabled = false
fog_height_min = 0.0
fog_height_max = 100.0
fog_height_curve = 1.0
tonemap_mode = 0
tonemap_exposure = 1.0
tonemap_white = 1.0
auto_exposure_enabled = false
auto_exposure_scale = 0.4
auto_exposure_min_luma = 0.05
auto_exposure_max_luma = 8.0
auto_exposure_speed = 0.5
ss_reflections_enabled = false
ss_reflections_max_steps = 64
ss_reflections_fade_in = 0.15
ss_reflections_fade_out = 2.0
ss_reflections_depth_tolerance = 0.2
ss_reflections_roughness = true
ssao_enabled = false
ssao_radius = 1.0
ssao_intensity = 1.0
ssao_radius2 = 0.0
ssao_intensity2 = 1.0
ssao_bias = 0.01
ssao_light_affect = 0.0
ssao_color = Color( 0, 0, 0, 1 )
ssao_quality = 0
ssao_blur = 3
ssao_edge_sharpness = 4.0
dof_blur_far_enabled = false
dof_blur_far_distance = 10.0
dof_blur_far_transition = 5.0
dof_blur_far_amount = 0.1
dof_blur_far_quality = 1
dof_blur_near_enabled = false
dof_blur_near_distance = 2.0
dof_blur_near_transition = 1.0
dof_blur_near_amount = 0.1
dof_blur_near_quality = 1
glow_enabled = false
glow_levels/1 = false
glow_levels/2 = false
glow_levels/3 = true
glow_levels/4 = false
glow_levels/5 = true
glow_levels/6 = false
glow_levels/7 = false
glow_intensity = 0.8
glow_strength = 1.0
glow_bloom = 0.0
glow_blend_mode = 2
glow_hdr_threshold = 1.0
glow_hdr_scale = 2.0
glow_bicubic_upscale = false
adjustment_enabled = false
adjustment_brightness = 1.0
adjustment_contrast = 1.0
adjustment_saturation = 1.0
_sections_unfolded = [ "Ambient Light" ]

[sub_resource type="BoxShape" id=2]

extents = Vector3( 7.08577, 3.2806, 1 )

[sub_resource type="BoxShape" id=3]

extents = Vector3( 1, 6.48122, 9.92675 )

[sub_resource type="SphereMesh" id=4]

custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
radius = 0.1
height = 0.2
radial_segments = 16
rings = 8
is_hemisphere = false

[sub_resource type="SpatialMaterial" id=5]

render_priority = 0
flags_transparent = false
flags_unshaded = false
flags_vertex_lighting = false
flags_no_depth_test = false
flags_use_point_size = false
flags_world_triplanar = false
flags_fixed_size = false
flags_albedo_tex_force_srgb = false
vertex_color_use_as_albedo = false
vertex_color_is_srgb = false
params_diffuse_mode = 0
params_specular_mode = 0
params_blend_mode = 0
params_cull_mode = 0
params_depth_draw_mode = 0
params_line_width = 1.0
params_point_size = 1.0
params_billboard_mode = 0
params_grow = false
params_use_alpha_scissor = false
albedo_color = Color( 1, 0, 0.914063, 1 )
metallic = 0.0
metallic_specular = 0.5
metallic_texture_channel = 0
roughness = 0.0
roughness_texture_channel = 0
emission_enabled = false
normal_enabled = false
rim_enabled = false
clearcoat_enabled = false
anisotropy_enabled = false
ao_enabled = false
depth_enabled = false
subsurf_scatter_enabled = false
transmission_enabled = false
refraction_enabled = false
detail_enabled = false
uv1_scale = Vector3( 1, 1, 1 )
uv1_offset = Vector3( 0, 0, 0 )
uv1_triplanar = false
uv1_triplanar_sharpness = 1.0
uv2_scale = Vector3( 1, 1, 1 )
uv2_offset = Vector3( 0, 0, 0 )
uv2_triplanar = false
uv2_triplanar_sharpness = 1.0
proximity_fade_enable = false
distance_fade_enable = false

[node name="Level06Boss" type="Spatial" index="0"]

script = ExtResource( 1 )

[node name="RespawnPoint" type="Spatial" parent="." index="0"]

transform = Transform( -0.965926, 0, 0.258819, 0, 1, 0, -0.258819, 0, -0.965926, 74.119, -5.26786, -203.04 )

[node name="Player" parent="." index="1" instance=ExtResource( 2 )]

transform = Transform( -0.965926, 0, 0.258819, 0, 1, 0, -0.258819, 0, -0.965926, 75.8707, -5.57824, -202.983 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="." index="2"]

environment = SubResource( 1 )

[node name="LevelText" type="Label" parent="." index="3"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -51.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "LongTestToMakeSureItWillFitAndBeCentered"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="LevelObjective" type="Label" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_bottom = 51.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "LongTestToMakeSureItWillFitAndBeCentered"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="EndOfLevel" type="Spatial" parent="." index="5"]

editor/display_folded = true
transform = Transform( 0.386808, 0, 0.92216, 0, 1, 0, -0.92216, 0, 0.386808, 79.3938, -7.44183, -206.872 )
script = ExtResource( 4 )

[node name="Area" type="Area" parent="EndOfLevel" index="0"]

input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 1
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape" type="CollisionShape" parent="EndOfLevel/Area" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.80655, 0.368965 )
shape = SubResource( 2 )
disabled = false

[node name="LevelEndParticles" parent="EndOfLevel/Area" index="1" instance=ExtResource( 5 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.421509, -56.8543 )

[node name="EndOfLevelShow" type="Spatial" parent="." index="6"]

transform = Transform( 0.416015, 0, 0.909358, 0, 1, 0, -0.909358, 0, 0.416015, 79.4021, -7.44183, -206.904 )

[node name="EndOfLevelHide" type="Spatial" parent="." index="7"]

transform = Transform( 0.416015, 0, 0.909358, 0, 1, 0, -0.909358, 0, 0.416015, 79.4021, -29.1835, -206.904 )

[node name="LevelLimits" type="StaticBody" parent="." index="8"]

editor/display_folded = true
transform = Transform( -0.945931, 0, 0.324366, 0, 1, 0, -0.324366, 0, -0.945931, 72.3589, -7.92505, -213.791 )
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="wall1" type="CollisionShape" parent="LevelLimits" index="0"]

transform = Transform( 0.997958, 0, -0.063879, 0, 1, 0, 0.063879, 0, 0.997958, -10.7328, 8.07071, -1.96214 )
shape = SubResource( 3 )
disabled = false

[node name="wall2" type="CollisionShape" parent="LevelLimits" index="1"]

transform = Transform( 0.999758, 0, -0.022042, 0, 1, 0, 0.022042, 0, 0.999758, 2.2356, 8.07071, -1.16867 )
shape = SubResource( 3 )
disabled = false

[node name="wall3" type="CollisionShape" parent="LevelLimits" index="2"]

transform = Transform( -0.0748323, 0, -0.997196, 0, 1, 0, 0.997196, 0, -0.0748323, -5.7555, 12.0066, 14.979 )
shape = SubResource( 3 )
disabled = false

[node name="wall4" type="CollisionShape" parent="LevelLimits" index="3"]

transform = Transform( 0.994666, 0, -0.10316, 0, 1, 0, 0.10316, 0, 0.994666, 2.01257, 12.0066, 7.8369 )
shape = SubResource( 3 )
disabled = false

[node name="wall5" type="CollisionShape" parent="LevelLimits" index="4"]

transform = Transform( 0.994666, 0, -0.10316, 0, 1, 0, 0.10316, 0, 0.994666, -11.8098, 12.0066, 8.39972 )
shape = SubResource( 3 )
disabled = false

[node name="wall6" type="CollisionShape" parent="LevelLimits" index="5"]

transform = Transform( 0.945473, 0, -0.325702, 0, 1, 0, 0.325702, 0, 0.945473, -9.01256, 10.1893, -15.2411 )
shape = SubResource( 3 )
disabled = false

[node name="wall7" type="CollisionShape" parent="LevelLimits" index="6"]

transform = Transform( 0.710345, 0, -0.703854, 0, 1, 0, 0.703854, 0, 0.710345, -6.34711, 10.1893, -20.9933 )
shape = SubResource( 3 )
disabled = false

[node name="wall8" type="CollisionShape" parent="LevelLimits" index="7"]

transform = Transform( -0.814722, 0, -0.579853, 0, 1, 0, 0.579853, 0, -0.814722, 0.699986, 10.1893, -19.5685 )
shape = SubResource( 3 )
disabled = false

[node name="wall9" type="CollisionShape" parent="LevelLimits" index="8"]

transform = Transform( -0.987302, 0, -0.158859, 0, 1, 0, 0.158859, 0, -0.987302, 2.16286, 10.1893, -13.5246 )
shape = SubResource( 3 )
disabled = false

[node name="MusicControllerBoss" type="Node" parent="." index="9"]

editor/display_folded = true
script = ExtResource( 6 )

[node name="AudioStreamA" type="AudioStreamPlayer" parent="MusicControllerBoss" index="0"]

stream = ExtResource( 7 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "MusicBus"

[node name="AudioStreamBS" type="AudioStreamPlayer" parent="MusicControllerBoss" index="1"]

stream = ExtResource( 8 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "MusicBus"

[node name="AudioStreamOtF" type="AudioStreamPlayer" parent="MusicControllerBoss" index="2"]

stream = ExtResource( 9 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "MusicBus"

[node name="BossShipNew" parent="." index="10" instance=ExtResource( 10 )]

[node name="NavMeshBossShip" parent="." index="11" instance=ExtResource( 11 )]

[node name="WaypointsHolder" type="Spatial" parent="NavMeshBossShip" index="2"]

editor/display_folded = true
script = ExtResource( 12 )

[node name="Waypoint1" type="Spatial" parent="NavMeshBossShip/WaypointsHolder" index="0"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 77.8126, -5.30725, -215.634 )
_sections_unfolded = [ "Transform" ]

[node name="MeshInstance" type="MeshInstance" parent="NavMeshBossShip/WaypointsHolder/Waypoint1" index="0"]

layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 4 )
skeleton = NodePath("..")
material/0 = SubResource( 5 )
_sections_unfolded = [ "Transform", "material" ]

[node name="Waypoint2" type="Spatial" parent="NavMeshBossShip/WaypointsHolder" index="1"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 80.1258, -5.30725, -214.368 )
_sections_unfolded = [ "Transform" ]

[node name="MeshInstance" type="MeshInstance" parent="NavMeshBossShip/WaypointsHolder/Waypoint2" index="0"]

layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 4 )
skeleton = NodePath("..")
material/0 = SubResource( 5 )
_sections_unfolded = [ "Transform", "material" ]

[node name="Waypoint3" type="Spatial" parent="NavMeshBossShip/WaypointsHolder" index="2"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 75.2812, -5.30725, -216.55 )
_sections_unfolded = [ "Transform" ]

[node name="MeshInstance" type="MeshInstance" parent="NavMeshBossShip/WaypointsHolder/Waypoint3" index="0"]

layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 4 )
skeleton = NodePath("..")
material/0 = SubResource( 5 )
_sections_unfolded = [ "Transform", "material" ]

[node name="Waypoint4" type="Spatial" parent="NavMeshBossShip/WaypointsHolder" index="3"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 73.099, -5.30725, -211.357 )
_sections_unfolded = [ "Transform" ]

[node name="MeshInstance" type="MeshInstance" parent="NavMeshBossShip/WaypointsHolder/Waypoint4" index="0"]

layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 4 )
skeleton = NodePath("..")
material/0 = SubResource( 5 )
_sections_unfolded = [ "Transform", "material" ]

[node name="Waypoint5" type="Spatial" parent="NavMeshBossShip/WaypointsHolder" index="4"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 78.4236, -5.30725, -209.044 )
_sections_unfolded = [ "Transform" ]

[node name="MeshInstance" type="MeshInstance" parent="NavMeshBossShip/WaypointsHolder/Waypoint5" index="0"]

layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 4 )
skeleton = NodePath("..")
material/0 = SubResource( 5 )
_sections_unfolded = [ "Transform", "material" ]

[node name="Waypoint6" type="Spatial" parent="NavMeshBossShip/WaypointsHolder" index="5"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 76.9834, -5.30725, -212.317 )
_sections_unfolded = [ "Transform" ]

[node name="MeshInstance" type="MeshInstance" parent="NavMeshBossShip/WaypointsHolder/Waypoint6" index="0"]

layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 4 )
skeleton = NodePath("..")
material/0 = SubResource( 5 )
_sections_unfolded = [ "Transform", "material" ]

[node name="Waypoint7" type="Spatial" parent="NavMeshBossShip/WaypointsHolder" index="6"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 74.5829, -5.30725, -206.949 )
_sections_unfolded = [ "Transform" ]

[node name="MeshInstance" type="MeshInstance" parent="NavMeshBossShip/WaypointsHolder/Waypoint7" index="0"]

layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 4 )
skeleton = NodePath("..")
material/0 = SubResource( 5 )
_sections_unfolded = [ "Transform", "material" ]

[node name="Waypoint8" type="Spatial" parent="NavMeshBossShip/WaypointsHolder" index="7"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 74.5829, -5.30725, -202.061 )
_sections_unfolded = [ "Transform" ]

[node name="MeshInstance" type="MeshInstance" parent="NavMeshBossShip/WaypointsHolder/Waypoint8" index="0"]

layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 4 )
skeleton = NodePath("..")
material/0 = SubResource( 5 )
_sections_unfolded = [ "Transform", "material" ]

[node name="Waypoint9" type="Spatial" parent="NavMeshBossShip/WaypointsHolder" index="8"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 70.524, -5.30725, -203.632 )
_sections_unfolded = [ "Transform" ]

[node name="MeshInstance" type="MeshInstance" parent="NavMeshBossShip/WaypointsHolder/Waypoint9" index="0"]

layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 4 )
skeleton = NodePath("..")
material/0 = SubResource( 5 )
_sections_unfolded = [ "Transform", "material" ]

[node name="EnemyHolder" type="Spatial" parent="NavMeshBossShip" index="3"]

editor/display_folded = true

[node name="DaveyJonesNav" parent="NavMeshBossShip/EnemyHolder" index="0" instance=ExtResource( 13 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 78.037, -6.56567, -215.715 )

[connection signal="finished" from="MusicControllerBoss/AudioStreamA" to="MusicControllerBoss" method="_on_AudioStreamA_finished"]

[connection signal="finished" from="MusicControllerBoss/AudioStreamBS" to="MusicControllerBoss" method="_on_AudioStreamBS_finished"]

[connection signal="finished" from="MusicControllerBoss/AudioStreamOtF" to="MusicControllerBoss" method="_on_AudioStreamOtF_finished"]


